// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditProjectDropdown dropdown opens correctly 1`] = `
<div class="edit-project">
  <div class="edit-project__selection-area active">
    <h1 title="test" class="edit-project__selection-area__name">test</h1> <svg width="3" height="15" viewBox="0 0 3 15" fill="none" xmlns="http://www.w3.org/2000/svg" class="edit-project__selection-area__image">
      <path d="M2.72723 1.36362C2.72723 2.11672 2.11672 2.72723 1.36362 2.72723C0.610511 2.72723 0 2.11672 0 1.36362C0 0.610511 0.610511 0 1.36362 0C2.11672 0 2.72723 0.610511 2.72723 1.36362Z" fill="#1B2533" class="edit-dots-svg-path"></path>
      <path d="M2.72723 7.49922C2.72723 8.25232 2.11672 8.86283 1.36362 8.86283C0.610511 8.86283 0 8.25232 0 7.49922C0 6.74611 0.610511 6.1356 1.36362 6.1356C2.11672 6.1356 2.72723 6.74611 2.72723 7.49922Z" fill="#1B2533" class="edit-dots-svg-path"></path>
      <path d="M1.36362 15C2.11672 15 2.72723 14.3895 2.72723 13.6364C2.72723 12.8833 2.11672 12.2728 1.36362 12.2728C0.610511 12.2728 0 12.8833 0 13.6364C0 14.3895 0.610511 15 1.36362 15Z" fill="#1B2533" class="edit-dots-svg-path"></path>
    </svg>
  </div>
  <div class="edit-project__dropdown">
    <div class="edit-project__dropdown__choice"><svg width="13" height="13" viewBox="0 0 13 13" fill="none" xmlns="http://www.w3.org/2000/svg">
        <path d="M9.43444 0L12.13 2.69556L3.50422 11.3213L0 12.13L0.808667 8.62578L9.43444 0Z" fill="#2582FF"></path>
      </svg>
      <p class="edit-project__dropdown__choice__label">Edit Details</p>
    </div>
  </div>
</div>
`;

exports[`EditProjectDropdown renders correctly 1`] = `
<div class="edit-project">
  <div class="edit-project__selection-area">
    <h1 title="test" class="edit-project__selection-area__name">test</h1> <svg width="3" height="15" viewBox="0 0 3 15" fill="none" xmlns="http://www.w3.org/2000/svg" class="edit-project__selection-area__image">
      <path d="M2.72723 1.36362C2.72723 2.11672 2.11672 2.72723 1.36362 2.72723C0.610511 2.72723 0 2.11672 0 1.36362C0 0.610511 0.610511 0 1.36362 0C2.11672 0 2.72723 0.610511 2.72723 1.36362Z" fill="#1B2533" class="edit-dots-svg-path"></path>
      <path d="M2.72723 7.49922C2.72723 8.25232 2.11672 8.86283 1.36362 8.86283C0.610511 8.86283 0 8.25232 0 7.49922C0 6.74611 0.610511 6.1356 1.36362 6.1356C2.11672 6.1356 2.72723 6.74611 2.72723 7.49922Z" fill="#1B2533" class="edit-dots-svg-path"></path>
      <path d="M1.36362 15C2.11672 15 2.72723 14.3895 2.72723 13.6364C2.72723 12.8833 2.11672 12.2728 1.36362 12.2728C0.610511 12.2728 0 12.8833 0 13.6364C0 14.3895 0.610511 15 1.36362 15Z" fill="#1B2533" class="edit-dots-svg-path"></path>
    </svg>
  </div>
  <!---->
</div>
`;
